# sequelize_project/swagger.yaml
@@ -48,6 +48,48 @@ paths:
           description: Invalid email or password
         '500':
           description: Internal server error
+
+  /posts:
+    post:
+      summary: Create a new post
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PostInput'
+      responses:
+        '201':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Post'
+        '401':
+          description: Unauthorized
+        '500':
+          description: Internal server error
+
+  /posts/{postId}/like:
+    post:
+      summary: Like a post
+      parameters:
+        - in: path
+          name: postId
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Post liked successfully
+        '400':
+          description: User has already liked the post
+        '401':
+          description: Unauthorized
+        '404':
+          description: Post not found
+        '500':
+          description: Internal server error
       
 
 components:
@@ -75,4 +117,53 @@ components:
       required:
         - email
         - password
+    PostInput:
+      type: object
+      properties:
+        title:
+          type: string
+        desc:
+          type: string
+        imageUrl:
+          type: string
+          default: "https://www.shutterstock.com/discover/free-nature-images"
+      required:
+        - title
+    PostSummary:
+      type: object
+      properties:
+        id:
+          type: string
+        title:
+          type: string
+        desc:
+          type: string
+        numLikes:
+          type: integer
+        numDislikes:
+          type: integer
+        
+    Post:
+      type: object
+      properties:
+        id:
+          type: string
+        title:
+          type: string
+        desc:
+          type: string
+        imageUrl:
+          type: string
+        userId:
+          type: integer
+        numLikes:
+          type: integer
+        numDislikes:
+          type: integer
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time    
                     
